--- a/style.css
+++ b/style.css
@@ -14,6 +14,13 @@ a {
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
     border-radius: 16px;
     padding: 30px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: all 150ms ease-in-out;
+}
+
+.weather-app:hover {
+    filter: contrast(80%);
+    transform: scale(1.1);
 }
 
 header {
@@ -126,3 +133,17 @@ footer {
     font-size: 14px;
     color: rgba(0, 0, 0, 0.6);
 }
+
+@media (max-width: 400px) {
+    .weather-app {
+        padding: 10px;
+    }
+}
+
+@media (max-width: 600px) {
+    .weather-forecast-icon {
+        width: 50px;
+    }
+}
+
+
