--- a/style.css
+++ b/style.css
@@ -18,10 +18,10 @@ a {
     transition: all 150ms ease-in-out;
 }
 
-.weather-app:hover {
+/*.weather-app:hover {
     filter: contrast(80%);
     transform: scale(1.1);
-}
+}*/
 
 header {
     border-bottom: 1px solid #f9f7fe;
